# EssentialCpp

./: DIP.cpp  Dictionary.cpp  DynamicArray.cpp  Gallery.cpp  README.md  SmartPointer.cpp
StringCalculatorApp/: CMakeLists.txt  source.cpp
StringCalculatorApp/StringCalculator/: CMakeLists.txt  Helper.cpp  Helper.h  Negatives.h  StringCalculator.cpp  StringCalculator.h
